--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Timeblocks go here -->
     </div>
       <div class = "row"> 
-        <p class = "hour col-md-1" id = "9am"> </p> 09AM  </p>
+        <p class = "hour col-md-1" id = "9"> </p> 09AM  </p>
         <textarea class = "input col-md-8" id="inputArea"> </textarea>
         <button type = "submit" class = "col-md-1 submitBtn"> </button>
       </div>
@@ -41,7 +41,7 @@
 
         </div>
       </div>
-        <div class = "time" id = 10AM > 
+        <div class = "time" id = "10" > 
           <div class = "row"> 
             <p class = "hour col-md-1" id = "10am"> </p> 10AM </p>
             <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -50,7 +50,7 @@
       </div>
 
     </div>
-    <div class = "time" id = 11AM > 
+    <div class = "time" id = "11" > 
       <div class = "row"> 
         <p class = "hour col-md-1" id = "11am"> </p> 11AM </p>
         <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -59,7 +59,7 @@
   </div>
 
 </div>
-<div class = "time" id = 12PM > 
+<div class = "time" id = "12" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "12pm"> </p> 12PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -68,7 +68,7 @@
 </div>
 
 </div>
-<div class = "time" id = 1PM > 
+<div class = "time" id = "13" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "1pm"> </p> 01PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -77,7 +77,7 @@
 </div>
 
 </div>
-<div class = "time" id = 2PM > 
+<div class = "time" id = "14 > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "2pm"> </p> 02PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -86,7 +86,7 @@
 </div>
 
 </div>
-<div class = "time" id = 3PM > 
+<div class = "time" id = "15" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = 4pm"> </p> 03PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -94,7 +94,7 @@
   </div>
 </div>
 
-<div class = "time" id = 5PM > 
+<div class = "time" id = "16 > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "4pm"> </p> 04PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -102,7 +102,7 @@
   </div>
 </div>
 
-<div class = "time" id = 5PM > 
+<div class = "time" id = "17" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "5pm"> </p> 05PM </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
