--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     <div class="container">
       <!-- Timeblocks go here -->
     </div>
-      <div class = "row"> 
-        <p class = "hour col-md-1" id = "9"> </p> 09AM  </p>
-        <textarea class = "input col-md-8" id="inputArea"> </textarea>
-        <button type = "submit" class = "col-md-1 submitBtn"> </button>
+    <div class= "time" id="9"><
+        <div class = "row"> 
+          <p class = "hour col-md-1" id = "9"> </p> 9:00  </p>
+          <textarea class = "input col-md-8" id="inputArea"> </textarea>
+          <button type = "submit" class = "col-md-1 submitBtn"> </button>
+        </div>
       </div>
   </div>
 
@@ -43,7 +45,7 @@
       </div>
         <div class = "time" id = "10" > 
           <div class = "row"> 
-            <p class = "hour col-md-1" id = "10am"> </p> 10AM </p>
+            <p class = "hour col-md-1" id = "10am"> </p> 10:00 </p>
             <textarea class = "input col-md-8" id="inputArea"> </textarea>
             <button type = "submit" class = "col-md-1 submitBtn"> </button>
           </div>
@@ -52,7 +54,7 @@
     </div>
     <div class = "time" id = "11" > 
       <div class = "row"> 
-        <p class = "hour col-md-1" id = "11am"> </p> 11AM </p>
+        <p class = "hour col-md-1" id = "11am"> </p> 11:00 </p>
         <textarea class = "input col-md-8" id="inputArea"> </textarea>
         <button type = "submit" class = "col-md-1 submitBtn"> </button>
       </div>
@@ -61,7 +63,7 @@
 </div>
 <div class = "time" id = "12" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = "12pm"> </p> 12PM </p>
+    <p class = "hour col-md-1" id = "12pm"> </p> 12:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
@@ -70,16 +72,16 @@
 </div>
 <div class = "time" id = "13" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = "1pm"> </p> 01PM </p>
+    <p class = "hour col-md-1" id = "1pm"> </p> 1:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
 
 </div>
-<div class = "time" id = "14 > 
+<div class = "time" id = "14" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = "2pm"> </p> 02PM </p>
+    <p class = "hour col-md-1" id = "2pm"> </p> 2:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
@@ -88,15 +90,15 @@
 </div>
 <div class = "time" id = "15" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = 4pm"> </p> 03PM </p>
+    <p class = "hour col-md-1" id = 3pm"> </p> 3:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
 
-<div class = "time" id = "16 > 
+<div class = "time" id = "16" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = "4pm"> </p> 04PM </p>
+    <p class = "hour col-md-1" id = "4pm"> </p> 4:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
@@ -104,7 +106,7 @@
 
 <div class = "time" id = "17" > 
   <div class = "row"> 
-    <p class = "hour col-md-1" id = "5pm"> </p> 05PM </p>
+    <p class = "hour col-md-1" id = "5pm"> </p> 5:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
