--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <!-- Timeblocks go here -->
     </div>
-    <div class= "time" id="9"><
+    <div class= "time-block" id="9"><
         <div class = "row"> 
           <p class = "hour col-md-1" id = "9"> </p> 9:00  </p>
           <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -43,7 +43,7 @@
 
         </div>
       </div>
-        <div class = "time" id = "10" > 
+        <div class = "time-block" id = "10" > 
           <div class = "row"> 
             <p class = "hour col-md-1" id = "10am"> </p> 10:00 </p>
             <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -52,7 +52,7 @@
       </div>
 
     </div>
-    <div class = "time" id = "11" > 
+    <div class = "time-block" id = "11" > 
       <div class = "row"> 
         <p class = "hour col-md-1" id = "11am"> </p> 11:00 </p>
         <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -61,7 +61,7 @@
   </div>
 
 </div>
-<div class = "time" id = "12" > 
+<div class = "time-block" id = "12" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "12pm"> </p> 12:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -70,7 +70,7 @@
 </div>
 
 </div>
-<div class = "time" id = "13" > 
+<div class = "time-block" id = "13" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "1pm"> </p> 1:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -79,7 +79,7 @@
 </div>
 
 </div>
-<div class = "time" id = "14" > 
+<div class = "time-block" id = "14" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "2pm"> </p> 2:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -88,7 +88,7 @@
 </div>
 
 </div>
-<div class = "time" id = "15" > 
+<div class = "time-block" id = "15" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = 3pm"> </p> 3:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -96,7 +96,7 @@
   </div>
 </div>
 
-<div class = "time" id = "16" > 
+<div class = "time-block" id = "16" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "4pm"> </p> 4:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
@@ -104,7 +104,7 @@
   </div>
 </div>
 
-<div class = "time" id = "17" > 
+<div class = "time-block" id = "17" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "5pm"> </p> 5:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
