--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class = "row"> 
     <p class = "hour col-md-1" id = "1pm"> </p> 1:00 </p>
     <textarea class = "input col-md-8" id="inputArea"> </textarea>
-    <button type = "submit" class = "col-md-1 submitBtn"> </button>
+    <button type = "submit" class = "col-md-1 submitBtn"> Save</button>
   </div>
 </div>
 
