textarea id's added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class= "time-block" id="9"><
         <div class = "row"> 
           <p class = "hour col-md-1" id = "9"> </p> 9:00  </p>
-          <textarea class = "input col-md-8" id="inputArea"> </textarea>
+          <textarea class = "input col-md-8" id="inputArea9"> </textarea>
           <button type = "submit" class = "col-md-1 submitBtn"> </button>
         </div>
       </div>
@@ -46,7 +46,7 @@
         <div class = "time-block" id = "10" > 
           <div class = "row"> 
             <p class = "hour col-md-1" id = "10am"> </p> 10:00 </p>
-            <textarea class = "input col-md-8" id="inputArea"> </textarea>
+            <textarea class = "input col-md-8" id="inputArea10"> </textarea>
             <button type = "submit" class = "col-md-1 submitBtn"> </button>
           </div>
       </div>
@@ -55,7 +55,7 @@
     <div class = "time-block" id = "11" > 
       <div class = "row"> 
         <p class = "hour col-md-1" id = "11am"> </p> 11:00 </p>
-        <textarea class = "input col-md-8" id="inputArea"> </textarea>
+        <textarea class = "input col-md-8" id="inputArea11"> </textarea>
         <button type = "submit" class = "col-md-1 submitBtn"> </button>
       </div>
   </div>
@@ -64,7 +64,7 @@
 <div class = "time-block" id = "12" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "12pm"> </p> 12:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea12"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
@@ -73,7 +73,7 @@
 <div class = "time-block" id = "13" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "1pm"> </p> 1:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea13"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> Save</button>
   </div>
 </div>
@@ -82,7 +82,7 @@
 <div class = "time-block" id = "14" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "2pm"> </p> 2:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea14"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
@@ -91,7 +91,7 @@
 <div class = "time-block" id = "15" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = 3pm"> </p> 3:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea15"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
@@ -99,7 +99,7 @@
 <div class = "time-block" id = "16" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "4pm"> </p> 4:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea16"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
@@ -107,7 +107,7 @@
 <div class = "time-block" id = "17" > 
   <div class = "row"> 
     <p class = "hour col-md-1" id = "5pm"> </p> 5:00 </p>
-    <textarea class = "input col-md-8" id="inputArea"> </textarea>
+    <textarea class = "input col-md-8" id="inputArea17"> </textarea>
     <button type = "submit" class = "col-md-1 submitBtn"> </button>
   </div>
 </div>
